fix(cli): :zap: refactor

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,3 +107,4 @@ jobs:
               with:
                   branch: feature/providers-major
                   github_token: ${{ secrets.GITHUB_TOKEN }}
+                  force: true
