--- a/package.json
+++ b/package.json
@@ -80,7 +80,9 @@
         "eslint-config-prettier": "^8.5.0",
         "fs-extra": "^11.1.0",
         "git-cz": "^4.9.0",
+        "got": "11.8.3",
         "husky": "^8.0.2",
+        "mime-types": "^2.1.35",
         "only-allow": "^1.1.1",
         "prettier": "^2.8.0",
         "pretty-quick": "^3.1.3",
