--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -9,7 +9,8 @@
         "format:write": "prettier --write .",
         "lint:check": "eslint .",
         "lint:fix": "eslint --fix .",
-        "test.unit": "cross-env NODE_ENV=test node ../../node_modules/uvu/bin.js tests"
+        "test.unit": "cross-env NODE_ENV=test node ../../node_modules/uvu/bin.js tests",
+        "build": "rollup -c"
     },
     "keywords": [],
     "files": [
