--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -12,13 +12,15 @@
     "dependencies": {
         "dotenv": "^16.0.3",
         "mongodb": "^4.11.0",
-        "mysql2": "^2.3.3"
+        "mysql2": "^2.3.3",
+        "sqlite3": "^5.1.4"
     },
     "exports": {
         "./mock": "./lib/mock/index.cjs",
         "./mongo": "./lib/mongo/index.cjs",
         "./json": "./lib/json/index.cjs",
-        "./mysql": "./lib/mysql/index.cjs"
+        "./mysql": "./lib/mysql/index.cjs",
+        "./sqlite": "./lib/sqlite/index.cjs"
     },
     "repository": {
         "type": "git",
