test: :zap: ci test e2e

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "copy.lib": "node ./scripts/move.js",
         "test.unit": "node ./node_modules/uvu/bin.js packages test",
         "test.e2e": "node ./node_modules/uvu/bin.js __test__",
-        "test.coverage": "node ./node_modules/c8/bin/c8.js npm run test.unit && npm run test.e2e",
+        "test.coverage": "node ./node_modules/c8/bin/c8.js npm run test.unit",
         "test": "npm run test.coverage",
         "cli": "node ./packages/cli/bin/cli.js",
         "create": "node ./packages/create-bot-whatsapp/bin/create.js",
