--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
         runs-on: ubuntu-latest
         needs:
             - test-unit
+            - test-e2e
         steps:
             - name: Checkout
               uses: actions/checkout@v3
