feat: :zap: events list

--- a/starters/apps/base-venom-json/package.json
+++ b/starters/apps/base-venom-json/package.json
@@ -10,12 +10,12 @@
     "keywords": [],
     "dependencies": {
         "venom-bot": "4.3.7",
+        "mime-types": "2.1.35",
         "@bot-whatsapp/bot": "latest",
         "@bot-whatsapp/cli": "latest",
         "@bot-whatsapp/database": "latest",
         "@bot-whatsapp/provider": "latest",
-        "@bot-whatsapp/portal": "latest",
-        "mime-types": "2.1.35"
+        "@bot-whatsapp/portal": "latest"
     },
     "author": "",
     "license": "ISC"
