--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
         "fmt.staged": "pretty-quick --staged",
         "lint:check": "eslint ./packages",
         "lint:fix": "eslint --fix ./packages",
-        "build:portal-web": "cd ./packages/portal/ && yarn run build.types && yarn run build.client && yarn run build.server && yarn run lint --fix",
-        "build:full": "yarn run build:portal-web && yarn run cli:rollup && yarn run bot:rollup && yarn run provider:rollup && yarn run database:rollup && yarn run contexts:rollup && yarn run create-bot-whatsapp:rollup && yarn run portal:rollup",
-        "build": "yarn run cli:rollup && yarn run bot:rollup && yarn run provider:rollup && yarn run database:rollup && yarn run contexts:rollup && yarn run create-bot-whatsapp:rollup && yarn run portal:rollup",
+        "build:portal-web": "cd ./packages/portal/ && pnpm run build.types && pnpm run build.client && pnpm run build.server && pnpm run lint --fix",
+        "build:full": "pnpm run build:portal-web && pnpm run cli:rollup && pnpm run bot:rollup && pnpm run provider:rollup && pnpm run database:rollup && pnpm run contexts:rollup && pnpm run create-bot-whatsapp:rollup && pnpm run portal:rollup",
+        "build": "pnpm run cli:rollup && pnpm run bot:rollup && pnpm run provider:rollup && pnpm run database:rollup && pnpm run contexts:rollup && pnpm run create-bot-whatsapp:rollup && pnpm run portal:rollup",
         "copy.lib": "node ./scripts/move.js",
         "test.unit": "node ./node_modules/uvu/bin.js packages test",
         "test.e2e": "node ./node_modules/uvu/bin.js __test__",
@@ -32,19 +32,9 @@
         "dev:debug": "node --inspect ./example-app/app.js",
         "dev": "node ./example-app/app.js",
         "prepare": "npx husky install",
-        "preinstall": "npx only-allow yarn",
+        "preinstall": "npx only-allow pnpm",
         "release": "standard-version -- --prerelease --global"
     },
-    "workspaces": [
-        "packages/create-bot-whatsapp",
-        "packages/bot",
-        "packages/cli",
-        "packages/database",
-        "packages/provider",
-        "packages/contexts",
-        "packages/portal",
-        "packages/docs"
-    ],
     "keywords": [
         "whatsapp",
         "bot-whatsapp",
@@ -65,39 +55,40 @@
     "repository": "https://github.com/leifermendez/bot-whatsapp",
     "license": "ISC",
     "devDependencies": {
-        "@commitlint/cli": "^17.3.0",
-        "@commitlint/config-conventional": "^17.3.0",
-        "@octokit/core": "^4.1.0",
-        "@rollup/plugin-commonjs": "^23.0.2",
-        "@rollup/plugin-json": "^5.0.1",
+        "@commitlint/cli": "^17.4.4",
+        "@commitlint/config-conventional": "^17.4.4",
+        "@octokit/core": "^4.2.0",
+        "@rollup/plugin-commonjs": "^23.0.7",
+        "@rollup/plugin-json": "^5.0.2",
         "@rollup/plugin-node-resolve": "^15.0.1",
-        "@rollup/plugin-replace": "^5.0.1",
-        "c8": "^7.12.0",
+        "@rollup/plugin-replace": "^5.0.2",
+        "c8": "^7.13.0",
         "conventional-changelog": "^3.1.25",
         "cross-env": "^7.0.3",
-        "eslint": "^8.26.0",
-        "eslint-config-prettier": "^8.5.0",
+        "eslint": "^8.34.0",
+        "eslint-config-prettier": "^8.6.0",
         "fs-extra": "^11.1.0",
         "git-cz": "^4.9.0",
-        "husky": "^8.0.2",
+        "husky": "^8.0.3",
         "mime-types": "^2.1.35",
         "only-allow": "^1.1.1",
-        "prettier": "^2.8.0",
+        "prettier": "^2.8.4",
         "pretty-quick": "^3.1.3",
         "prompts": "^2.4.2",
         "rimraf": "^3.0.2",
-        "rollup": "^3.2.3",
+        "rollup": "^3.17.2",
         "rollup-plugin-cleanup": "^3.2.1",
         "rollup-plugin-copy": "^3.4.0",
         "semver": "^7.3.8",
         "standard-version": "^9.5.0",
         "uvu": "^0.5.6"
     },
-    "packageManager": "yarn@3.3.0",
+    "packageManager": "pnpm@7.25.1",
     "engines": {
         "node": ">=16",
-        "npm": "please-use-yarn",
-        "yarn": ">=3"
+        "npm": "please-use-pnpm",
+        "yarn": "please-use-pnpm",
+        "pnpm": ">=7.18.0"
     },
-    "author": "Leifer Mendez <leifer33@gmail.com>"
+    "author": "Leifer Mendez <leifer.contacto@gmail.com>"
 }
