--- a/starters/apps/base-twilio-mysql/package.json
+++ b/starters/apps/base-twilio-mysql/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "app.js",
     "scripts": {
-        "pre-copy": "cd .. && yarn run copy.lib base-twilio-mysql",
+        "pre-copy": "cd .. && npm run  copy.lib base-twilio-mysql",
         "start": "node app.js"
     },
     "keywords": [],
