--- a/.github/workflows/releases-dev.yml
+++ b/.github/workflows/releases-dev.yml
@@ -32,7 +32,7 @@ jobs:
             - run: corepack enable
 
             - name: Install NPM Dependencies
-              run: pnpm install --immutable --network-timeout 300000
+              run: pnpm install --frozen-lockfile
 
             - name: Build Package
               run: pnpm build:full
