--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "build": "pnpm run cli:rollup && pnpm run bot:rollup && pnpm run provider:rollup && pnpm run database:rollup && pnpm run contexts:rollup && pnpm run create-bot-whatsapp:rollup && pnpm run portal:rollup",
         "copy.lib": "node ./scripts/move.js",
         "test.unit": "node ./node_modules/uvu/bin.js packages test",
-        "test.e2e": "node ./node_modules/uvu/bin.js __test__",
+        "test.e2e": "node ./node_modules/uvu/bin.js __test__ ",
         "test.coverage": "node ./node_modules/c8/bin/c8.js npm run test.unit",
         "test": "npm run test.coverage",
         "cli": "node ./packages/cli/bin/cli.js",
@@ -90,5 +90,8 @@
         "yarn": "please-use-pnpm",
         "pnpm": ">=7.18.0"
     },
-    "author": "Leifer Mendez <leifer.contacto@gmail.com>"
+    "author": "Leifer Mendez <leifer.contacto@gmail.com>",
+    "dependencies": {
+        "@rollup/plugin-strip": "^3.0.2"
+    }
 }
