--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -27,7 +27,7 @@ jobs:
             - run: corepack enable
 
             - name: Install NPM Dependencies
-              run: pnpm install --immutable --network-timeout 300000
+              run: pnpm install --frozen-lockfile
 
             - name: Add netlify
               run: pnpm add netlify-cli -D
