ci: :zap: add cli netlify

--- a/.github/workflows/netlify-dev.yml
+++ b/.github/workflows/netlify-dev.yml
@@ -36,7 +36,7 @@ jobs:
               run: pnpm install --frozen-lockfile
 
             - name: Add netlify
-              run: pnpm add netlify-cli -D
+              run: pnpm install netlify-cli -D
 
             - name: Create .env build file
               run: |
