--- a/.github/workflows/releases-dev.yml
+++ b/.github/workflows/releases-dev.yml
@@ -7,8 +7,8 @@ on:
 
 jobs:
     ############ RELEASE ############
-    release:
-        name: Release
+    build:
+        name: Build DEV
         runs-on: ubuntu-latest
         outputs:
             commit: ${{ steps.vars.outputs.commit }}
@@ -36,6 +36,39 @@ jobs:
 
             - name: Build Package
               run: pnpm build:full
+
+            - uses: actions/cache@v3
+              with:
+                  path: ./packages
+                  key: packages-key
+    release:
+        name: Release DEV
+        runs-on: ubuntu-latest
+        needs:
+            - build
+        outputs:
+            commit: ${{ steps.vars.outputs.commit }}
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v3
+              with:
+                  fetch-depth: 0
+                  ref: ${{github.event.after}}
+                  persist-credentials: false
+
+            - name: Setup Node
+              uses: actions/setup-node@v3
+              with:
+                  node-version: 16.x
+                  cache: 'npm'
+                  registry-url: https://registry.npmjs.org/
+
+            - run: corepack enable
+
+            - uses: actions/cache@v3
+              with:
+                  path: ./packages
+                  key: packages-key
 
             - name: Release @bot-whatsapp/bot
               run: node ./scripts/release.js --name=bot --version=  --token="${{ secrets.NPM_TOKEN }}"
