--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "license": "ISC",
     "devDependencies": {
         "@commitlint/cli": "^17.4.4",
+        "@rollup/plugin-strip": "^3.0.2",
         "@commitlint/config-conventional": "^17.4.4",
         "@octokit/core": "^4.2.0",
         "@rollup/plugin-commonjs": "^23.0.7",
@@ -90,8 +91,5 @@
         "yarn": "please-use-pnpm",
         "pnpm": ">=7.18.0"
     },
-    "author": "Leifer Mendez <leifer.contacto@gmail.com>",
-    "dependencies": {
-        "@rollup/plugin-strip": "^3.0.2"
-    }
+    "author": "Leifer Mendez <leifer.contacto@gmail.com>"
 }
