--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -13,7 +13,9 @@
         "@bot-whatsapp/bot": "*",
         "combine-image": "^1.0.3",
         "qr-image": "^3.2.0",
-        "rimraf": "^3.0.2"
+        "rimraf": "^3.0.2",
+        "@ffmpeg-installer/ffmpeg": "^1.1.0",
+        "fluent-ffmpeg": "^2.1.2"
     },
     "exports": {
         "./mock": "./lib/mock/index.cjs",
