--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -8,7 +8,8 @@
         "cross-env": "^7.0.3",
         "cross-spawn": "^7.0.3",
         "detect-package-manager": "^2.0.1",
-        "kleur": "^4.1.5"
+        "kleur": "^4.1.5",
+        "prompts": "^2.4.2"
     },
     "files": [
         "./starters/",
