--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -15,6 +15,7 @@
         "qr-image": "^3.2.0",
         "rimraf": "^3.0.2",
         "@ffmpeg-installer/ffmpeg": "^1.1.0",
+        "sharp": "^0.30.5",
         "fluent-ffmpeg": "^2.1.2"
     },
     "exports": {
