--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -11,11 +11,11 @@
     ],
     "dependencies": {
         "@bot-whatsapp/bot": "*",
-        "combine-image": "^1.0.3",
-        "qr-image": "^3.2.0",
-        "rimraf": "^3.0.2",
         "@ffmpeg-installer/ffmpeg": "^1.1.0",
-        "fluent-ffmpeg": "^2.1.2"
+        "combine-image": "^1.0.3",
+        "fluent-ffmpeg": "^2.1.2",
+        "qr-image": "^3.2.0",
+        "rimraf": "^3.0.2"
     },
     "exports": {
         "./mock": "./lib/mock/index.cjs",
@@ -29,5 +29,8 @@
     "repository": {
         "type": "git",
         "url": "https://github.com/codigoencasa/bot-whatsapp/tree/main/packages/provider"
+    },
+    "devDependencies": {
+        "follow-redirects": "^1.15.2"
     }
 }
