--- a/starters/apps/base-wppconnect-memory/package.json
+++ b/starters/apps/base-wppconnect-memory/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "base-bailey-memory",
+    "name": "base-wppconnect-memory",
     "version": "1.0.0",
     "description": "",
     "main": "app.js",
