--- a/starters/apps/base-baileys-mysql/package.json
+++ b/starters/apps/base-baileys-mysql/package.json
@@ -14,7 +14,7 @@
         "@bot-whatsapp/database": "latest",
         "@bot-whatsapp/provider": "latest",
         "@bot-whatsapp/portal": "latest",
-        "@adiwajshing/baileys": "4.4.0",
+        "@adiwajshing/baileys": "github:WhiskeySockets/Baileys",
         "mime-types": "2.1.35",
         "mysql2": "^2.3.3",
         "wa-sticker-formatter": "4.3.2"
