feat(provider): :memo: se actualizó el contexto (ctx) para incluir la url

--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -12,12 +12,13 @@
     "dependencies": {
         "@bot-whatsapp/bot": "*",
         "@ffmpeg-installer/ffmpeg": "^1.1.0",
+        "axios": "^1.4.0",
         "combine-image": "^1.0.3",
         "fluent-ffmpeg": "^2.1.2",
+        "follow-redirects": "^1.15.2",
         "qr-image": "^3.2.0",
         "rimraf": "^3.0.2",
-        "sharp": "^0.30.5",
-        "follow-redirects": "^1.15.2"
+        "sharp": "^0.30.5"
     },
     "exports": {
         "./mock": "./lib/mock/index.cjs",
