--- a/packages/provider/src/baileys/package.json
+++ b/packages/provider/src/baileys/package.json
@@ -1,6 +1,6 @@
 {
     "dependencies": {
-        "@adiwajshing/baileys": "github:WhiskeySockets/Baileys",
+        "@adiwajshing/baileys": "4.4.0",
         "wa-sticker-formatter": "4.3.2"
     }
 }
