--- a/packages/provider/src/baileys/package.json
+++ b/packages/provider/src/baileys/package.json
@@ -1,6 +1,7 @@
 {
     "dependencies": {
-        "@adiwajshing/baileys": "4.4.0",
+        "@adiwajshing/baileys": "github:WhiskeySockets/Baileys",
+        "@adiwajshing/keyed-db": "^0.2.4",
         "wa-sticker-formatter": "4.3.2"
     }
 }
