--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -23,6 +23,7 @@
     "@builder.io/qwik": "0.16.1",
     "@builder.io/qwik-city": "0.0.128",
     "@builder.io/qwik-react": "0.2.1",
+    "@docsearch/react": "^3.3.3",
     "@emotion/react": "11.10.4",
     "@emotion/styled": "11.10.4",
     "@fontsource/inter": "^4.5.14",
@@ -53,11 +54,9 @@
     "subfont": "^6.12.2",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.4",
-    "vite": "3.2.4",
+    "vite": "^3.2.4",
     "vite-imagetools": "^4.0.11",
-    "vite-tsconfig-paths": "3.6.0",
-    "@docsearch/react": "^3.3.3"
-
+    "vite-tsconfig-paths": "3.6.0"
   },
   "engines": {
     "node": ">=17.0.0"
