--- a/packages/provider/src/baileys/package.json
+++ b/packages/provider/src/baileys/package.json
@@ -1,7 +1,6 @@
 {
     "dependencies": {
-        "@adiwajshing/baileys": "github:WhiskeySockets/Baileys",
-        "@adiwajshing/keyed-db": "^0.2.4",
+        "@whiskeysockets/baileys": "^6.4.0",
         "wa-sticker-formatter": "4.3.2"
     }
 }
