--- a/starters/apps/base-wweb-postgres/package.json
+++ b/starters/apps/base-wweb-postgres/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "base-wweb-mysql",
+    "name": "base-wweb-postgres",
     "version": "1.0.0",
     "description": "",
     "main": "app.js",
     "scripts": {
-        "pre-copy": "cd .. && npm run  copy.lib base-wweb-mysql",
+        "pre-copy": "cd .. && npm run  copy.lib base-wweb-postgres",
         "start": "node app.js"
     },
     "keywords": [],
@@ -15,7 +15,7 @@
         "@bot-whatsapp/database": "latest",
         "@bot-whatsapp/provider": "latest",
         "@bot-whatsapp/portal": "latest",
-        "mysql2": "^2.3.3"
+        "pg": "^8.11.2"
     },
     "author": "",
     "license": "ISC"
