--- a/starters/apps/base-baileys-postgres/package.json
+++ b/starters/apps/base-baileys-postgres/package.json
@@ -14,9 +14,9 @@
         "@bot-whatsapp/database": "latest",
         "@bot-whatsapp/provider": "latest",
         "@bot-whatsapp/portal": "latest",
-        "pg": "^8.11.2",
         "@whiskeysockets/baileys": "^6.4.0",
-        "wa-sticker-formatter": "4.3.2"
+        "wa-sticker-formatter": "4.3.2",
+        "pg": "^8.11.2"
     },
     "author": "",
     "license": "ISC"
