--- a/starters/apps/base-wppconnect-postgres/package.json
+++ b/starters/apps/base-wppconnect-postgres/package.json
@@ -1,9 +1,10 @@
 {
-    "name": "base-wppconnect-memory",
+    "name": "base-wppconnect-postgres",
     "version": "1.0.0",
     "description": "",
     "main": "app.js",
     "scripts": {
+        "pre-copy": "cd .. && npm run  copy.lib base-wppconnect-postgres",
         "start": "node app.js"
     },
     "keywords": [],
@@ -15,7 +16,7 @@
         "@bot-whatsapp/provider": "latest",
         "@wppconnect-team/wppconnect": "1.22.0",
         "mime-types": "2.1.35",
-        "mysql2": "2.3.3"
+        "pg": "^8.11.2"
     },
     "author": "",
     "license": "ISC"
