chore: ⚡add event action pre-copy command npm for developer wppconnect

--- a/starters/apps/base-wppconnect-json/package.json
+++ b/starters/apps/base-wppconnect-json/package.json
@@ -1,9 +1,10 @@
 {
-    "name": "base-wppconnect-memory",
+    "name": "base-wppconnect-json",
     "version": "1.0.0",
     "description": "",
     "main": "app.js",
     "scripts": {
+        "pre-copy": "cd .. && npm run  copy.lib base-wppconnect-json",
         "start": "node app.js"
     },
     "keywords": [],
