--- a/starters/apps/base-wppconnect-memory/package.json
+++ b/starters/apps/base-wppconnect-memory/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "app.js",
     "scripts": {
+        "pre-copy": "cd .. && npm run  copy.lib base-wppconnect-memory",
         "start": "node app.js"
     },
     "keywords": [],
