--- a/packages/provider/src/wppconnect/package.json
+++ b/packages/provider/src/wppconnect/package.json
@@ -1,5 +1,5 @@
 {
     "dependencies": {
-        "@wppconnect-team/wppconnect": "1.22.0"
+        "@wppconnect-team/wppconnect": "^1.27.3"
     }
 }
