--- a/starters/apps/base-wppconnect-memory/package.json
+++ b/starters/apps/base-wppconnect-memory/package.json
@@ -14,7 +14,7 @@
         "@bot-whatsapp/database": "latest",
         "@bot-whatsapp/portal": "latest",
         "@bot-whatsapp/provider": "latest",
-        "@wppconnect-team/wppconnect": "1.22.0",
+        "@wppconnect-team/wppconnect": "^1.27.3",
         "mime-types": "2.1.35"
     },
     "author": "",
