--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@bot-whatsapp/bot",
-    "version": "0.0.143-alpha.0",
+    "version": "0.0.147-alpha.0",
     "description": "",
     "main": "./lib/bundle.bot.cjs",
     "scripts": {
@@ -25,8 +25,7 @@
         "kleur": "^4.1.5"
     },
     "dependencies": {
-        "dotenv": "^16.0.3",
-        "queue-promise": "^2.2.1"
+        "dotenv": "^16.0.3"
     },
     "repository": {
         "type": "git",
