Revert "build: pnpm"
This reverts commit e122985fadd7146fca4676ec93eb09d6d19da0a3.

--- a/.github/workflows/netlify-dev.yml
+++ b/.github/workflows/netlify-dev.yml
@@ -33,7 +33,7 @@ jobs:
             - run: corepack enable
 
             - name: Install NPM Dependencies
-              run: pnpm install --no-frozen-lockfile
+              run: pnpm install --frozen-lockfile
 
             - name: Add netlify
               run: pnpm install netlify-cli -w
