--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -27,7 +27,7 @@ jobs:
             - run: corepack enable
 
             - name: Install NPM Dependencies
-              run: pnpm install --no-frozen-lockfile
+              run: pnpm install --frozen-lockfile
 
             - name: Add netlify
               run: pnpm install netlify-cli -w
