--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -66,5 +66,8 @@ jobs:
             - name: Release @bot-whatsapp/portal
               run: node ./scripts/release.js --name=portal --version="${{ steps.package-version.outputs.current-version}}" --token="${{ secrets.NPM_TOKEN }}"
 
+            - name: Release eslint-plugin-bot-whatsapp
+              run: node ./scripts/release.js --name=eslint-plugin-bot-whatsapp --version="${{ steps.package-version.outputs.current-version}}" --token="${{ secrets.NPM_TOKEN }}"
+
             - name: Release Github
               run: node ./scripts/github.js --version="${{ steps.package-version.outputs.current-version}}" --token="${{ secrets.OCTO_TOKEN }}"
