--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "provider:rollup": "rollup --config ./packages/provider/rollup-provider.config.js ",
         "contexts:rollup": "rollup --config ./packages/contexts/rollup-contexts.config.js",
         "database:rollup": "rollup --config ./packages/database/rollup-database.config.js",
+        "eslint-plugin:rollup": "rollup --config ./packages/eslint-plugin-bot-whatsapp/rollup-eslint.config.js",
         "create-bot-whatsapp:rollup": "rollup --config ./packages/create-bot-whatsapp/rollup-create.config.js",
         "portal:rollup": "rollup --config ./packages/portal/rollup-portal.config.js",
         "format:check": "prettier --check ./packages",
@@ -21,7 +22,7 @@
         "lint:fix": "eslint --fix ./packages",
         "build:portal-web": "cd ./packages/portal/ && pnpm run build.types && pnpm run build.client && pnpm run build.server && pnpm run lint --fix",
         "build:full": "pnpm run build:portal-web && pnpm run cli:rollup && pnpm run bot:rollup && pnpm run provider:rollup && pnpm run database:rollup && pnpm run contexts:rollup && pnpm run create-bot-whatsapp:rollup && pnpm run portal:rollup",
-        "build": "pnpm run cli:rollup && pnpm run bot:rollup && pnpm run provider:rollup && pnpm run database:rollup && pnpm run contexts:rollup && pnpm run create-bot-whatsapp:rollup && pnpm run portal:rollup",
+        "build": "pnpm run cli:rollup && pnpm run bot:rollup && pnpm run provider:rollup && pnpm run database:rollup && pnpm run contexts:rollup && pnpm run create-bot-whatsapp:rollup && pnpm run portal:rollup && pnpm run eslint-plugin:rollup",
         "copy.lib": "node ./scripts/move.js",
         "test.unit": "node ./node_modules/uvu/bin.js packages test",
         "test.e2e": "node ./node_modules/uvu/bin.js __test__",
