--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -39,4 +39,4 @@ jobs:
 
             - name: Build and Deploy
               run: |
-                  cd packages/docs && netlify deploy --prod --build --site ${{ secrets.NETLIFY_SITE_ID }} --auth ${{ secrets.NETLIFY_AUTH_TOKEN }}
+                  cd packages/docs && npm run build && netlify deploy --prod --site ${{ secrets.NETLIFY_SITE_ID }} --auth ${{ secrets.NETLIFY_AUTH_TOKEN }}
