--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -3,7 +3,7 @@
   "description": "A template to make your website using Qwik + Tailwind CSS.",
   "version": "0.1.1",
   "scripts": {
-    "build": "qwik build && npm run subfont",
+    "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.server": "vite build -c adaptors/netlify-edge/vite.config.ts",
@@ -16,7 +16,7 @@
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
-    "subfont": "subfont -i --inline-css --no-fallbacks --silent --root dist",
+    "subfont": "subfont -i --inline-css --no-fallbacks --silent --root ./dist",
     "qwik": "qwik"
   },
   "devDependencies": {
