--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -18,7 +18,8 @@
         "follow-redirects": "^1.15.2",
         "qr-image": "^3.2.0",
         "rimraf": "^3.0.2",
-        "sharp": "^0.30.5"
+        "sharp": "^0.30.5",
+        "queue-promise": "^2.2.1"
     },
     "exports": {
         "./mock": "./lib/mock/index.cjs",
