--- a/packages/provider/src/baileys/package.json
+++ b/packages/provider/src/baileys/package.json
@@ -1,6 +1,7 @@
 {
     "dependencies": {
         "@whiskeysockets/baileys": "^6.5.0",
-        "wa-sticker-formatter": "4.3.2"
+        "wa-sticker-formatter": "4.3.2",
+        "sharp": "^0.30.5"
     }
 }
