--- a/packages/provider/src/meta/package.json
+++ b/packages/provider/src/meta/package.json
@@ -1,6 +1,6 @@
 {
     "dependencies": {
-        "form-data": "^4.0.0",
-        "queue-promise": "^2.2.1"
+        "form-data": "4.0.0",
+        "queue-promise": "2.2.1"
     }
 }
