--- a/starters/apps/base-meta-memory/package.json
+++ b/starters/apps/base-meta-memory/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "app.js",
     "scripts": {
+        "prestart": "npx eslint . --no-ignore",
         "pre-copy": "cd .. && npm run  copy.lib base-meta-memory",
         "start": "node app.js"
     },
@@ -15,7 +16,9 @@
         "@bot-whatsapp/cli": "latest",
         "@bot-whatsapp/database": "latest",
         "@bot-whatsapp/provider": "latest",
-        "axios": "^1.2.1"
+        "axios": "^1.2.1",
+        "form-data": "4.0.0",
+        "queue-promise": "2.2.1"
     },
     "devDependencies": {
         "eslint-plugin-bot-whatsapp": "latest",
