--- a/starters/apps/base-wppconnect-json/package.json
+++ b/starters/apps/base-wppconnect-json/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "app.js",
     "scripts": {
+        "prestart": "npx eslint . --no-ignore",
         "pre-copy": "cd .. && npm run  copy.lib base-wppconnect-json",
         "start": "node app.js"
     },
@@ -14,7 +15,7 @@
         "@bot-whatsapp/database": "latest",
         "@bot-whatsapp/portal": "latest",
         "@bot-whatsapp/provider": "latest",
-        "@wppconnect-team/wppconnect": "^1.27.3",
+        "@wppconnect-team/wppconnect": "1.28.3",
         "mime-types": "2.1.35"
     },
     "devDependencies": {
