--- a/starters/apps/base-wweb-memory/package.json
+++ b/starters/apps/base-wweb-memory/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "app.js",
     "scripts": {
+        "prestart": "npx eslint . --no-ignore",
         "pre-copy": "cd .. && npm run  copy.lib base-wweb-memory",
         "start": "node app.js"
     },
@@ -14,7 +15,7 @@
         "@bot-whatsapp/database": "latest",
         "@bot-whatsapp/provider": "latest",
         "@bot-whatsapp/portal": "latest",
-        "whatsapp-web.js": "^1.22.1"
+        "whatsapp-web.js": "1.23.0"
     },
     "devDependencies": {
         "eslint-plugin-bot-whatsapp": "latest",
