--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
         "rollup-plugin-copy": "^3.5.0",
         "semver": "^7.5.4",
         "standard-version": "^9.5.0",
+        "tree-node-cli": "^1.6.0",
         "uvu": "^0.5.6"
     },
     "packageManager": "pnpm@8.6.12",
