build: :zap: improved

--- a/starters/apps/base-baileys-json/package.json
+++ b/starters/apps/base-baileys-json/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "app.js",
     "scripts": {
+        "prestart": "npx eslint . --no-ignore",
         "pre-copy": "cd .. && npm run  copy.lib base-baileys-json",
         "start": "node app.js"
     },
