--- a/package.json
+++ b/package.json
@@ -72,13 +72,15 @@
         "fs-extra": "^11.1.1",
         "git-cz": "^4.9.0",
         "husky": "^8.0.3",
+        "lerna": "^8.0.2",
         "mime-types": "^2.1.35",
+        "nx": "^17.2.8",
         "only-allow": "^1.2.1",
         "prettier": "^2.8.8",
         "pretty-quick": "^3.1.3",
         "prompts": "^2.4.2",
         "rimraf": "^4.4.1",
-        "rollup": "^3.29.4",
+        "rollup": "^4.9.3",
         "rollup-plugin-cleanup": "^3.2.1",
         "rollup-plugin-copy": "^3.5.0",
         "semver": "^7.5.4",
