--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -3,6 +3,9 @@
     "version": "0.0.111-alpha.0",
     "description": "",
     "main": "index.js",
+    "scripts": {
+        "build": "rimraf ./lib && rollup --config ./rollup.config.js"
+    },
     "devDependencies": {
         "@clack/prompts": "^0.5.0",
         "cross-env": "^7.0.3",
