--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@rollup/plugin-replace": "^5.0.4",
         "@rollup/plugin-strip": "^3.0.4",
+        "@rollup/plugin-typescript": "^11.1.5",
+        "@types/assert": "^1.5.10",
+        "@types/node": "^20.10.6",
         "c8": "^7.14.0",
         "conventional-changelog": "^3.1.25",
         "cross-env": "^7.0.3",
@@ -83,9 +86,12 @@
         "rollup": "^4.9.3",
         "rollup-plugin-cleanup": "^3.2.1",
         "rollup-plugin-copy": "^3.5.0",
+        "rollup-plugin-typescript2": "^0.36.0",
         "semver": "^7.5.4",
         "standard-version": "^9.5.0",
         "tree-node-cli": "^1.6.0",
+        "tslib": "^2.6.2",
+        "tsm": "^2.3.0",
         "uvu": "^0.5.6"
     },
     "packageManager": "pnpm@8.6.12",
