--- a/packages/bot-ts/package.json
+++ b/packages/bot-ts/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "bot-ts",
+    "name": "bot-ts-demo",
     "version": "0.1.0-alpha.0",
     "description": "core typescript",
     "author": "Leifer Mendez <leifer33@gmail.com>",
