--- a/packages/bot-ts/tsconfig.lib.json
+++ b/packages/bot-ts/tsconfig.lib.json
@@ -2,8 +2,19 @@
     "extends": "./tsconfig.json",
     "compilerOptions": {
         "outDir": "./dist/out-tsc",
-        "types": ["node"]
+        "types": [
+            "node"
+        ]
     },
-    "exclude": ["**/*.spec.ts", "**/*.spec.tsx", "node_modules"],
-    "include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx"]
+    "exclude": [
+        "**/*.spec.ts",
+        "**/*.spec.tsx",
+        "node_modules"
+    ],
+    "include": [
+        "**/*.js",
+        "**/*.jsx",
+        "**/*.ts",
+        "**/*.tsx"
+    ]
 }
