--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,9 @@
         }
     ],
     "parserOptions": {
-        "ecmaVersion": "latest"
+        "ecmaVersion": "latest",
+        "sourceType": "module",
+        "allowImportExportEverywhere": true
     },
     "ignorePatterns": ["node_modules/", "starters/", "__test__", "base-**"]
 }
