--- a/packages/database-ts/package.json
+++ b/packages/database-ts/package.json
@@ -1,33 +1,31 @@
 {
-    "name": "bot-ts-demo",
+    "name": "database-ts",
     "version": "0.1.0-alpha.0",
-    "description": "core typescript",
+    "description": "Esto es el conector a  mysql, pg, mongo",
+    "keywords": [],
     "author": "Leifer Mendez <leifer33@gmail.com>",
-    "homepage": "https://github.com/codigoencasa/bot-whatsapp#readme",
     "license": "ISC",
     "main": "dist/index.cjs",
     "types": "dist/index.d.ts",
     "type": "module",
-    "scripts": {
-        "build": "rimraf dist && rollup --config",
-        "test": " npx uvu -r tsm ./__tests__ methods.test.ts",
-        "test:debug": " npx tsm --inspect-brk ../../node_modules/uvu/bin.js ./__tests__ flowClass.test.ts"
-    },
-    "files": [
-        "./dist/"
-    ],
     "directories": {
         "src": "src",
         "test": "__tests__"
     },
+    "files": [
+        "./dist/"
+    ],
     "repository": {
         "type": "git",
         "url": "git+https://github.com/codigoencasa/bot-whatsapp.git"
     },
+    "scripts": {
+        "build": "rimraf dist && rollup --config",
+        "test": " npx uvu -r tsm ./__tests__ .test.ts",
+        "test:debug": " npx tsm --inspect-brk ../../node_modules/uvu/bin.js ./__tests__ .test.ts"
+    },
     "bugs": {
         "url": "https://github.com/codigoencasa/bot-whatsapp/issues"
     },
-    "devDependencies": {
-        "kleur": "^4.1.5"
-    }
+    "homepage": "https://github.com/codigoencasa/bot-whatsapp#readme"
 }
